--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
     "mdbvue": "^6.7.3",
+    "swiper": "^8.4.5",
     "vue": "^3.2.45",
     "vue-images-loaded": "^1.1.2",
+    "vue-lazyload": "^3.0.0-rc.2",
     "vue-masonry": "^0.16.0",
     "vue-prlx": "^1.3.4",
     "vue-router": "^4.1.6",
-    "vue3-virtual-scroller": "^0.2.3",
-    "vuex": "^4.1.0",
-    "wowjs": "^1.1.3"
+    "vue3-lazy": "^1.0.0-alpha.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vue-concise-slider": "^4.2.5"
   }
 }
