--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.2.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "bootstrap-waterfall": "^0.2.4",
+    "element-plus": "^2.2.28",
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
     "mdbvue": "^6.7.3",
@@ -24,12 +25,16 @@
     "vue-masonry": "^0.16.0",
     "vue-prlx": "^1.3.4",
     "vue-router": "^4.1.6",
+    "vue-seamless-scroll": "^1.1.23",
     "vue3-lazy": "^1.0.0-alpha.1",
+    "vue3-seamless-scroll": "^2.0.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
     "vue-concise-slider": "^4.2.5"
   }
