--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_PATH =  https://vue-course-api.hexschool.io
+VITE_API_PATH =  https://vue3-course-api.hexschool.io
 VITE_CUSTOM_PATH = mksm
