--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bootstrap-waterfall": "^0.2.4",
     "element-plus": "^2.2.28",
     "imagesloaded": "^5.0.0",
+    "jquery": "^3.6.3",
     "masonry-layout": "^4.2.2",
     "mdbvue": "^6.7.3",
     "swiper": "^8.4.5",
+    "vee-validate": "^4.0.3",
     "vue": "^3.2.45",
     "vue-images-loaded": "^1.1.2",
     "vue-lazyload": "^3.0.0-rc.2",
@@ -26,9 +28,14 @@
     "vue-prlx": "^1.3.4",
     "vue-router": "^4.1.6",
     "vue-seamless-scroll": "^1.1.23",
+    "vue-virtual-scroll-list": "^2.3.4",
     "vue3-lazy": "^1.0.0-alpha.1",
     "vue3-seamless-scroll": "^2.0.1",
-    "vuex": "^4.1.0"
+    "vue3-virtual-scroll-list": "^0.2.1",
+    "vue3-virtual-scroller": "^0.2.3",
+    "vuex": "^4.1.0",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
